@@ -61,6 +61,9 @@ Avro 1.7.2 (unreleased)
     AVRO-1154. Java: Fix NettyTransciever to not hang when the server
     is stopped. (Karel Vervaeke & Bruno Dumon via cutting)
 
+    AVRO-1158. C: Fixed infinite loop in deflate decompression codec.
+    (Lucas Martin-King via dcreager)
+
 Avro 1.7.1 (16 July 2012)
 
   NEW FEATURES
